k8s/login-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: login
  template:
    metadata:
      labels:
        app: login
    spec:
      containers:
        - name: login-container
          image: yourdockerhub/login-service:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: login-service
spec:
  selector:
    app: login
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
