k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticket-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: your-domain.com
      http:
        paths:
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: login-service
                port:
                  number: 8081
          - path: /book
            pathType: Prefix
            backend:
              service:
                name: booking-service
                port:
                  number: 8082
          - path: /pay
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 8083
